# openCampusFarm

./: .env  .env.example  .gitignore  .project-root  README.md  ev_clean_periods.json  ev_clean_periods1.json  ev_nonEMS_charging_periods.json  ev_nonEMS_charging_periods1.json  main.py  pyproject.toml
EMS/: WT_NEW.py  WT_accounting.py  WT_data_optimization.py  WT_nonEMS.py  account.py  automation.py  charge_data.json  coolbot.py  cooler_dirty_periods.json  egauge_client.py  egauge_client_test.py  ems_UI.py  genDirtyPeriods.py  normal.py  real_time_ems.py  simulation.py  solArk_inverter.py  test_egauge_client.py  wattime_test.py  watttime_example.py
EMS/Loads/: coolbot.py  ev_battery.py
EMS/connections/: eGauge.py  ev_battery.py
EMS/connections/charger/: enphase_automation.py  generate_access_token.py  get_charger_consumption.py  iq60_api.py  solArk_inverter.py  test.py
Simulator/: PVdata.csv  campusFarm_simulator.py  sim.py
helpers/: fetch_watt_3y.py
