[project]
name = "campusfarm"
version = "0.1.0"
description = "Libraries for campusfarm repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.7.3",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "from-root>=1.3.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "websockets>=16.0",
]
[tool.pyright]
typeCheckingMode = "off"
